@@ -6,6 +6,7 @@
   * Adding case sensitive versions of string comparison operators equalTo and notEqualTo
   * Updated core to 0.86.0, fixing a bug in cancelling an empty transaction, and major query speedups with floats/doubles
   * Consistent handling of UTF-8 strings
+  * removeFromRealm() now calls moveLastOver() which is more reliable and faster
 
 0.73.1 (05 Nov 2014)
   * Fixed a bug that would send infinite notifications in some instances
